@@ -1,6 +1,7 @@
 ---
 language: perl
 perl:
+  - 5.27
   - 5.26
   - 5.24
   - 5.22
